# minilab-reaper-csurf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci-linux.yml
devel/: DEVELOPMENT_PLAN.md  MIDI_MAPPING.md  SDK_INTEGRATION_NOTES.md  run_reaper_clean.sh
src/: minilab_midi_handler.cpp  minilab_midi_handler.hpp  minilab_reaper_extension.cpp  minilab_reaper_extension.hpp  minilab_reaper_plugin.cpp  minilab_reaper_plugin.hpp  minilab_reaper_surface.cpp  minilab_reaper_surface.hpp
tests/: test_minilab_reaper_surface.cpp
